--- a/types/Constructor.html
+++ b/types/Constructor.html
@@ -14,21 +14,32 @@
 <ul class="tsd-breadcrumb">
 <li><a href="../modules.html">@ffstudios/ribbit.js</a></li>
 <li><a href="Constructor.html">Constructor</a></li></ul>
-<h1>Type alias Constructor&lt;Base, T, A&gt;</h1></div>
-<div class="tsd-signature">Constructor<span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Base</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">A</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">new </span><span class="tsd-signature-symbol">(</span>ribbit<span class="tsd-signature-symbol">: </span><a href="../classes/Ribbit.html" class="tsd-signature-type" data-tsd-kind="Class">Ribbit</a>, <span class="tsd-signature-symbol">...</span>args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-symbol">...</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">A</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-symbol">...</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">infer </span> B<span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-symbol">infer </span> C<span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> ? </span><span class="tsd-signature-symbol">{ </span><br/><span>    </span>args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">B</span><span class="tsd-signature-symbol">; </span><br/><span>    </span>type<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">C</span><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol"> : </span><span class="tsd-signature-type">never</span></div>
-<div class="tsd-comment tsd-typography"><p>Constructor infers the arguments and return type of a Ribbit constructor.</p>
-</div>
+<h1>Type alias Constructor&lt;Base&gt;</h1></div>
+<div class="tsd-signature">Constructor<span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Base</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">new </span><span class="tsd-signature-symbol">(</span>ribbit<span class="tsd-signature-symbol">: </span><a href="../classes/Ribbit.html" class="tsd-signature-type" data-tsd-kind="Class">Ribbit</a>, <span class="tsd-signature-symbol">...</span>args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Base</span><span class="tsd-signature-symbol">)</span></div>
 <section class="tsd-panel tsd-type-parameters">
 <h4>Type Parameters</h4>
 <ul class="tsd-type-parameters">
 <li>
-<h4>Base<span class="tsd-signature-symbol"> extends </span><a href="../classes/RibbitObject.html" class="tsd-signature-type" data-tsd-kind="Class">RibbitObject</a></h4></li>
+<h4>Base</h4></li></ul></section>
+<div class="tsd-type-declaration">
+<h4>Type declaration</h4>
+<ul class="tsd-parameters">
+<li class="tsd-parameter-signature">
+<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-type-alias">
+<li class="tsd-signature" id="__type.__type-1"><span class="tsd-signature-symbol">new </span><span class="tsd-signature-symbol">(</span>ribbit<span class="tsd-signature-symbol">: </span><a href="../classes/Ribbit.html" class="tsd-signature-type" data-tsd-kind="Class">Ribbit</a>, <span class="tsd-signature-symbol">...</span>args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Base</span></li>
+<li class="tsd-description">
+<div class="tsd-comment tsd-typography"><p>Constructor represents a constructor type that takes a Ribbit instance.</p>
+</div>
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
 <li>
-<h4>T<span class="tsd-signature-symbol"> extends </span><a href="ConstructorType.html" class="tsd-signature-type" data-tsd-kind="Type alias">ConstructorType</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Base</span><span class="tsd-signature-symbol">&gt;</span> = <a href="ConstructorType.html" class="tsd-signature-type" data-tsd-kind="Type alias">ConstructorType</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Base</span><span class="tsd-signature-symbol">&gt;</span></h4></li>
+<h5>ribbit: <a href="../classes/Ribbit.html" class="tsd-signature-type" data-tsd-kind="Class">Ribbit</a></h5></li>
 <li>
-<h4>A<span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">[]</span> = <span class="tsd-signature-symbol">[</span><span class="tsd-signature-symbol">]</span></h4></li></ul></section><aside class="tsd-sources">
+<h5><code class="tsd-tag ts-flagRest">Rest</code> <span class="tsd-signature-symbol">...</span>args: <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type" data-tsd-kind="Type parameter">Base</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/86c3d83/src/types.mts#L12">types.mts:12</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/a36b52c/src/types.mts#L7">types.mts:7</a></li></ul></aside></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -70,7 +81,7 @@
 <li class="tsd-kind-interface"><a href="../interfaces/RibbitObjectOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-interface)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-256-path"></rect><path d="M9.51 16V15.016H11.298V8.224H9.51V7.24H14.19V8.224H12.402V15.016H14.19V16H9.51Z" fill="var(--color-text)" id="icon-256-text"></path></svg>Ribbit<wbr/>Object<wbr/>Options</a></li>
 <li class="tsd-kind-interface"><a href="../interfaces/RibbitOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Ribbit<wbr/>Options</a></li>
 <li class="current tsd-kind-type-alias"><a href="Constructor.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-4194304-path"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)" id="icon-4194304-text"></path></svg>Constructor</a></li>
-<li class="tsd-kind-type-alias"><a href="ConstructorType.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-4194304-path"></use><use href="#icon-4194304-text"></use></svg>Constructor<wbr/>Type</a></li>
+<li class="tsd-kind-type-alias"><a href="ConstructorArgs.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-4194304-path"></use><use href="#icon-4194304-text"></use></svg>Constructor<wbr/>Args</a></li>
 <li class="tsd-kind-type-alias"><a href="Logan.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-4194304-path"></use><use href="#icon-4194304-text"></use></svg>Logan</a></li></ul></nav></div></div>
 <div class="container tsd-generator">
 <p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div>
